<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page1"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/page1"/>
    <item
        android:id="@+id/page2"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/page2"/>
    <item
        android:id="@+id/page3"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/page3"/>
    <item
        android:id="@+id/page4"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/page4"/>
    <item
        android:id="@+id/page5"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/page5"/>

</menu>